--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>O Titulo que o Vinicius criou</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias rem, error beatae praesentium ducimus facere voluptates dolores a sed enim dolorem, labore delectus impedit blanditiis quis nesciunt necessitatibus, facilis quisquam?</p>
-
+    <h1>O título que a Eduarda criou</h1>
 </body>
 </html>
