--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>O título que a Eduarda criou</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, minima obcaecati aut quos accusamus doloribus quibusdam provident laboriosam iste omnis perspiciatis libero! Quis illo magni voluptatibus, iste deleniti consequatur explicabo.</p>
+    <script src="script.js"></script>
+    <!--js interno-->
+<script>
+   // alert("Olá Mundo!")
+</script>
 </body>
 </html>
