--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>O título que a Eduarda criou</h1>
+
+    <script src="script.js"></script>
+    <!-- js interno -->
+    <script>
+        // alert('Olá mundo!')
+    </script>
 </body>
 </html>
