--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,8 @@
 </head>
 <body>
     
+    <h1>Titulo</h1>
+
+    <script src="exercicios/exercicio2.js"></script>
 </body>
 </html>
