conta bancaria e bonificacao

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>O título que a Eduarda criou</h1>
-    <script src="/calculadora.js"></script>
+    <script src="/exercicios/bonificacao.js"></script>
 </body>
 </html>
