--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>O título que a Eduarda criou</h1>
-    <script src="/exercicios/bonificacao.js"></script>
+    <h1>Cleitinho DEVS</h1>
+    <script src="/exercicios/contaBancaria.js"></script>
 </body>
 </html>
