--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Cleitinho DEVS</h1>
-    <script src="/exercicios/exercicios.js"></script>
+    <script src="/calculadora.js"></script>
 </body>
 </html>
